@@ -51,6 +51,7 @@ MidiLfo::MidiLfo()
             lt+=step;
     }
     muteMask.fill(false, size * res);
+    lastMouseLoc = 0;
 }
 
 MidiLfo::~MidiLfo(){
@@ -192,15 +193,25 @@ void MidiLfo::updateQueueTempo(int val)
     queueTempo = (double)val;
 }
 
-void MidiLfo::setCustomWavePoint(double mouseX, double mouseY)
+void MidiLfo::setCustomWavePoint(double mouseX, double mouseY, bool newpt)
 {
     LfoSample lfoSample;
     int loc = mouseX * res * size;
     
-    lfoSample = customWave.at(loc);
-    lfoSample.value = mouseY * 128;
-    lfoSample.tick = (int)(loc) * TICKS_PER_QUARTER / res;
-    customWave.replace(loc, lfoSample);
+    if ((!newpt) && (loc != lastMouseLoc)) {
+        do {
+            lfoSample = customWave.at(lastMouseLoc);
+            lfoSample.value = mouseY * 128;
+            customWave.replace(lastMouseLoc, lfoSample);
+            if (loc > lastMouseLoc) lastMouseLoc++; else lastMouseLoc--;
+        } while (lastMouseLoc != loc);
+    }
+    else {
+        lfoSample = customWave.at(loc);
+        lfoSample.value = mouseY * 128;
+        customWave.replace(loc, lfoSample);
+		lastMouseLoc = loc;
+    }
 }
 
 void MidiLfo::resizeAll()
